pkl-core/src/test/files/LanguageSnippetTests/input/errors/keywordNotAllowedHere1.pkl
outer = 42
res1 = 42